--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -10,18 +10,17 @@
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+	<script src="https://use.fontawesome.com/9f83e78065.js"></script>
 	<link rel="icon" href="images/favicon.png">
 	<meta property="og:image" content="images/dist/preview.jpg">
 	
 	<link rel="stylesheet" href="css/app.min.css">
+<!--	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />-->
 
 </head>
 
 <body>
 <header>
-
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="headline">
@@ -36,10 +35,29 @@
 				</div>
 				<div class="icons-block">
 					<ul class="icons-list">
-						<li class="icons-item"><a href="#"><img src="../images/src/icons/heart.svg" alt=""></a></li>
-						<li class="icons-item"><a href="#"><img src="../images/src/icons/user.svg" alt=""></a></li>
-						<li class="icons-item"><a href="#"><img src="../images/src/icons/shopping-bag.svg" alt=""></a></li>
+						<li class="icons-list-item"><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+						<li class="icons-list-item"><a href="#"><i class="fa-regular fa-circle-user"></i></a></li>
+						<li class="icons-list-item"><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
 					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="header">
+				<div class="header-lang">
+					<div class="header-lang-item"><img src="../images/src/lang-usa.svg" alt=""></div>
+					<div class="header-lang-item"><a href="">English</a></div>
+					<div class="header-lang-item"><a href="">USD</a></div>
+				</div>
+				<div class="header-logo">
+					<img src="../images/src/logo.svg" alt="">
+				</div>
+				<div class="header-search">
+					<form action="">
+						<input type="search" placeholder="Search">
+					</form>
 				</div>
 			</div>
 		</div>
