add sliders on main

--- a/app/index.html
+++ b/app/index.html
@@ -30,21 +30,377 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container" style="max-width: 1360px; margin-bottom: 50px">
     <div class="trending">
         <div class="trending-title">
-
+            TRENDING NOW
         </div>
         <div class="trending-slider-block">
             <div class="trending-slider">
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/trending-1.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Sensual Unbounded Triangle Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/trending-2.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Gioia Lace Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/trending-3.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Spices Elettra Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/trending-4.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Delicate Love Balconette Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/trending-2.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Sensual Unbounded Triangle Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act">$49.50</span>
+<!--                        <span class="price-disc">$38.20</span>-->
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/trending-1.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Gioia Lace Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act">$49.50</span>
+<!--                        <span class="price-disc">$38.20</span>-->
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/trending-3.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Sensual Unbounded Triangle Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/trending-4.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Delicate Love Balconette Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act">$49.50</span>
+<!--                        <span class="price-disc">$38.20</span>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container" style="max-width: 1360px">
+    <div class="trending">
+        <div class="trending-title">
+            NEW OFFERS
+        </div>
+        <div class="trending-slider-block">
+            <div class="trending-slider">
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/offers-1.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Seamless Supima® Cotton Shorts</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/offers-2.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Gioia Pretty Flowers Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/offers-3.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Spices Elettra Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/offers-4.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Prairie Bouquet Lara Triangle Bra Briefs</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/offers-2.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Sensual Unbounded Triangle Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act">$49.50</span>
+                        <!--                        <span class="price-disc">$38.20</span>-->
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/offers-1.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Gioia B Cup Microfibre Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act">$49.50</span>
+                        <!--                        <span class="price-disc">$38.20</span>-->
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/offers-3.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Sensual Unbounded Triangle Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/offers-4.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Delicate Love Balconette Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act">$49.50</span>
+                        <!--                        <span class="price-disc">$38.20</span>-->
+                    </div>
+                </div>
             </div>
         </div>
     </div>
